--- a/src/appStyling.css
+++ b/src/appStyling.css
@@ -2,18 +2,18 @@
 
 .main-cont {
     width: 80vw;
+}
+
+.quizOff {
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.quizOff {
-    height: 100vh;
-}
-
 .quizOn {
     height: 100%;
-    padding: 20px 0;
+    padding-top: 40px;
 }
 
 /**** HOMEPAGE ****/
